--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/date-fns": "^3.0.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/lab": "^6.0.0-beta.14",
+    "@mui/material": "^6.1.6",
+    "@mui/x-date-pickers": "^7.22.1",
+    "@nextui-org/react": "^2.4.8",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-slot": "^1.0.2",
@@ -17,14 +24,21 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "bootstrap-daterangepicker": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^4.1.0",
+    "daterangepicker": "^3.1.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
+    "jquery": "^3.7.1",
     "json-as-xlsx": "^2.5.3",
     "lucide-react": "^0.263.1",
-    "next": "13.4.13",
+    "moment": "^2.30.1",
+    "next": "^13.4.13",
     "next-themes": "^0.2.1",
+    "nextjs-tui-date-picker": "^2.2.3",
+    "nextjs-tui-date-range-picker": "^2.1.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
